# nitorch-plot

./: README.md  setup.cfg  setup.py
nitorch_plot/: colormaps.py  gui.py  volumes.py
nitorch_plot/cli/view/: cli.py  main.py  parser.py
