[metadata]
name = nitorch-plot
author = Yael Balbastre
author_email = yael.balbastre@gmail.com
description = Plotting utilities
long_description = file:README.md
platforms = OS Independent
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Medical Science Apps.
project_urls =
    Source Code=https://github.com/nitorch/nitorch-plot

[options]
python_requires = >= 3.6
install_requires =
    torch >= 1.8
    matplotlib
    nitorch-io @ git+https://github.com/balbasty/nitorch-io.git
    nitorch-core @ git+https://github.com/balbasty/nitorch-core.git
    nitorch-fastmath @ git+https://github.com/balbasty/nitorch-fastmath.git
    nitorch-interpol @ git+https://github.com/balbasty/nitorch-interpol.git

